unpackaged/objects/Student_Overloading_Module__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <label>Academic Year (e.g. AY2017/2018)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Request for Overloading/Underloading</relationshipLabel>
        <relationshipName>Student_Overloading_Modules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Overloading Modules</relationshipLabel>
        <relationshipName>Student_Overloading_Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modular_Credits__c</fullName>
        <label>Modular Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module_Code__c</fullName>
        <label>Module Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Host_Faculty__c</fullName>
        <label>Module Host Faculty (e.g. CLS, FOS, etc)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Instructor__c</fullName>
        <label>Module Instructor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Title__c</fullName>
        <label>Module Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <label>Semester (e.g. Semester 1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Student Overloading Module</label>
    <nameField>
        <displayFormat>SOM-{0000000000}</displayFormat>
        <label>Student Overloading Module ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Overloading Modules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>